--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
 
   <div id="root"></div>
   
-  <script src='index.js'></script>
+  <script src='/frontend/src/index.js'></script>
   
   </body>
   
